# telegram_bot_mongodb

./: .env.example  .gitignore  bot.py  main.py  mongo_utils.py  pyproject.toml  requirements.txt
src/: __init__.py  app.py  config.py  webhook.py
src/bot/: __init__.py  handlers.py  helpers.py
src/db/: queries.py
